<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_top"
        layout="@layout/layout_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:id="@+id/layout_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_top">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_request_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dim_normal_view_padding"
                android:layout_marginRight="@dimen/dim_normal_view_padding"
                android:layout_marginTop="@dimen/dim_normal_view_padding"
                android:background="@drawable/circularbutton_orange"
                android:drawableRight="@drawable/arrow_down"
                android:padding="@dimen/dim_normal_view_padding"
                android:text="@string/btn_request_name"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/dim_bigtext"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_day_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/dim_normal_view_padding"
                android:layout_marginRight="@dimen/dim_normal_view_padding"
                android:layout_marginTop="@dimen/dim_normal_view_padding"
                android:background="@drawable/circularbutton_orange"
                android:drawableRight="@drawable/arrow_down"
                android:padding="@dimen/dim_normal_view_padding"
                android:text="Day Type"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/dim_bigtext"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_startdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dim_normal_view_padding"
                android:layout_marginRight="@dimen/dim_normal_view_padding"
                android:layout_marginTop="@dimen/dim_normal_view_padding"
                android:background="@drawable/circularbutton_orange"
                android:drawableRight="@drawable/arrow_down"
                android:padding="@dimen/dim_normal_view_padding"
                android:text="@string/btn_start_date"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/dim_bigtext"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_standby"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dim_normal_view_padding"
                android:layout_marginRight="@dimen/dim_normal_view_padding"
                android:layout_marginTop="@dimen/dim_normal_view_padding"
                android:background="@drawable/circularbutton_orange"
                android:drawableRight="@drawable/arrow_down"
                android:padding="@dimen/dim_normal_view_padding"
                android:text="@string/btn_standby"
                android:visibility="gone"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/dim_bigtext"
                android:textStyle="bold" />

            <Button
            android:id="@+id/btn_enddate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dim_normal_view_padding"
            android:layout_marginRight="@dimen/dim_normal_view_padding"
            android:layout_marginTop="@dimen/dim_normal_view_padding"
            android:background="@drawable/circularbutton_orange"
            android:drawableRight="@drawable/arrow_down"
            android:padding="@dimen/dim_normal_view_padding"
            android:text="@string/btn_end_date"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/dim_bigtext"
            android:textStyle="bold" />



            <Button
                android:id="@+id/btn_actiontype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dim_normal_view_padding"
                android:layout_marginRight="@dimen/dim_normal_view_padding"
                android:layout_marginTop="@dimen/dim_normal_view_padding"
                android:background="@drawable/circularbutton_orange"
                android:drawableRight="@drawable/arrow_down"
                android:visibility="gone"
                android:padding="@dimen/dim_normal_view_padding"
                android:text="@string/btn_action_type"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/dim_bigtext"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_startdate_maint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dim_normal_view_padding"
                android:layout_marginRight="@dimen/dim_normal_view_padding"
                android:layout_marginTop="@dimen/dim_normal_view_padding"
                android:background="@drawable/circularbutton_orange"
                android:drawableRight="@drawable/arrow_down"
                android:visibility="gone"
                android:padding="@dimen/dim_normal_view_padding"
                android:text="@string/btn_start_date"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/dim_bigtext"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edt_remark"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dim_edt_remark_height"
                android:layout_marginLeft="@dimen/dim_normal_view_padding"
                android:layout_marginRight="@dimen/dim_normal_view_padding"
                android:layout_marginTop="@dimen/dim_normal_view_padding"
                android:background="@drawable/edt_border"
                android:gravity="top|left"
                android:hint="@string/edt_hint_remark"
                android:padding="@dimen/dim_normal_view_padding"
                android:textColorHint="#656567"
                android:textColor="#656567" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/edt_width"
                android:layout_height="@dimen/edt_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim_normal_view_margin"
                android:background="@drawable/circularbutton_red"
                android:padding="@dimen/dim_normal_view_padding"
                android:text="@string/btn_submit"
                android:textSize="@dimen/dim_bigtext"
                android:textColor="@color/colorButtonText"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/lv_request_status"
        android:layout_width="wrap_content"
        android:layout_below="@+id/layout_scroll"
        android:layout_marginTop="@dimen/dim_normal_view_padding"
        android:layout_height="wrap_content"
       ></ListView>
</RelativeLayout>